<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">资产配置</string>
    <string name="fund">基金</string>
    <string name="addFund">添加基金</string>
    <string name="fundCode">基金代码</string>
    <string name="stock">股票</string>
    <string name="proportion">资产比例</string>
    <string name="config">设置</string>
    <string name="add">添加</string>
    <string name="fund_name">名称</string>
    <string name="fund_price">现价</string>
    <string name="fund_updown">涨跌</string>
    <string name="fund_scope">涨跌幅</string>
    <string name="fund_date">日期</string>
    <string name="fund_poundage">手续费</string>
    <string name="fund_capital">本金</string>
    <string name="fund_sum">累计</string>
    <string name="fund_code">代码</string>
    <string name="stock_name">名称</string>
    <string name="stock_price">现价</string>
    <string name="stock_updown">涨跌</string>
    <string name="stock_updownscope">涨跌幅</string>
    <string name="stock_date">日期</string>
    <string name="stock_capital">本金</string>
    <string name="stock_tax">税收</string>
    <string name="title_addFund">添加基金</string>
    <string name="ok">确定</string>
    <string name="searchRate">费率查询</string>
    <string name="errorFindFundRate">查询不到指定日期的基金净值,请选择工作日！</string>
    <string name="errorFundCode">请输入正确的基金代码</string>

    <string name="editFundCodeHits">输入开放式基金代码</string>
    <string name="editFundMoney">输入整数,单位:元</string>
    <string name="textViewFundMoney">购买金额</string>
    <string name="editFundInsuranceRate">费率,不用输入%</string>
    
    <string name="textViewFundAmount">购买数量</string>
    <string name="editFundAmount">输入购买数量</string>
    
    <string name="textViewFundDate">购买日期</string>
    <string name="addDate">日期</string>
    <string name="addTime">时间</string>

    <color name="black">#000000</color>
    <color name="red">#FF0000</color>
    <color name="green">#008000</color>

    <string name="fund_buyMoney">金额</string>
    <string name="fund_buyAmount">数量</string>
    <string name="fund_buyPrice">价格</string>
    <string name="fund_buyDate">时间</string>

    <string name="fund_deleteAll">全部删除</string>
    <string name="fund_buyinfo">基金操作记录</string>

    <string name="fund_ProfitOrLossToday">今日盈亏</string>
    <string name="fund_ProfitOrLossSum">累计盈亏</string>
    <string name="fund_ProfitOrLossRate">盈亏幅度</string>
    <string name="fund_MarketValue">市值</string>
    <string name="fund_Position">持仓</string>

    <string name="alert_dialog_message">删除该基金所有记录？</string>

    <string name="fund_redeem">赎回</string>
    <string name="title_redeemFund">赎回基金</string>
    <string name="textViewFundRedeemMoney">赎回数量</string>
    <string name="editFundRedeemAmount">输入份数</string>
    <string name="textViewFundRedeemDate">赎回日期</string>
    <string name="textViewFundBackRate">后端申购</string>
    <string name="textViewFundRedeemRate">赎回费率</string>
    <string name="editFundRedeemRate">不用输入%</string>
    <string name="fund_BuyMoneySum">本金</string>
    <string name="errorRedeemAmount">赎回份数不能大于持仓份数!</string>
    <string name="fund_bonus">分红</string>
    <string name="searchFundInfo">查询基金信息</string>
    <string name="title_fundBonus">基金分红</string>
    <string name="textViewFundBonusDate">分红日期</string>
    <string name="editFundBonus">每10份分红金额</string>
    <string name="titleFundBonus">-基金分红</string>
    <string name="titleFundRedeem">-基金赎回</string>
    <string name="errorBonusMoney">基金分红金额未填写!</string>
    <string name="titleFundOperation">-操作日志</string>
    <string name="errorRedeemAmountNull">请输入赎回数量或赎回费率!</string>
    <string name="fund_operation">操作</string>
    <string name="buy">买入</string>
    <string name="redeem">赎回</string>
    <string name="bonus">分红</string>
    <string name="marketvalueSum">总市值</string>
    <string name="tv_fundProfitOrLossSum">总盈亏</string>
    <string name="tv_fundProfitOrLossToday">今日盈亏</string>
    <string name="marketvalueSumRate">总盈亏率</string>
    <string name="errorFundRate">基金费率未填写!</string>
    <string name="errorFundBackRate">费率未填写!</string>
    <string name="errorNetworkInvaild">网络不可用,请打开网络或稍后再试!</string>
    <string name="fastAdd">快速添加</string>
    <string name="titleFundAdd">-快速添加</string>
    <string name="errorFundMoney">基金金额未填写!</string>
    <string name="errorInputIsNull">输入为空,请输入所有必填项!</string>

</resources>
