<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:padding="5dp" >

    <TextView
        android:id="@+id/fund_textView1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:text="@string/fund_code" />

    <com.mdw.moneyconfig.InterceptScrollContainer
        android:id="@+id/fund_scroollContainter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/fund_textView1"
        android:focusable="false" >

        <com.mdw.moneyconfig.MyHScrollView
            android:id="@+id/fund_horizontalScrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/fund_textView2"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="20sp"
                    android:gravity="center_vertical"
                    android:text="@string/fund_name"/>

                <TextView
                    android:id="@+id/fund_textView3"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="20sp"
                    android:gravity="center_vertical"
                    android:text="@string/fund_price"/>

                <TextView
                    android:id="@+id/fund_textView4"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="20sp"
                    android:gravity="center_vertical"
                    android:text="@string/fund_updown"/>

                <TextView
                    android:id="@+id/fund_textView5"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="20sp"
                    android:gravity="center_vertical"
                    android:text="@string/fund_scope"/>

                <TextView
                    android:id="@+id/fund_textView6"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="20sp"
                    android:gravity="center_vertical"
                    android:text="@string/fund_date"/>

                <TextView
                    android:id="@+id/fund_textView7"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="20sp"
                    android:gravity="center_vertical"
                    android:text="@string/fund_poundage"/>
                
                <TextView
                    android:id="@+id/fund_textView8"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="20sp"
                    android:gravity="center_vertical"
                    android:text="@string/fund_capital"/>
            </LinearLayout>
        </com.mdw.moneyconfig.MyHScrollView>
    </com.mdw.moneyconfig.InterceptScrollContainer>

</RelativeLayout>